Crash on active_slot_switch_ready -- mm_gdbus_modem_get_unlock_required
Issue present since October or November of 2020
Thread 0(id: 11833) CRASHED [ SIGSEGV /0x00000000@0x0000000000000000 ]
0x00000000ee6d778c (libmm-glib.so.0 - mm-gdbus-modem.c: 24732) mm_gdbus_modem_get_unlock_required
0x0000000008bb504f (ModemManager - mm-iface-modem.c: 3316) set_lock_status
0x0000000008bb239f (ModemManager - mm-iface-modem.c: 3645) update_lock_info_context_step
0x0000000008bb36c9 (ModemManager - mm-iface-modem.c: 5380) interface_initialization_step
0x0000000008bb662d (ModemManager - mm-iface-modem.c: 4666) load_sim_slots_ready
0x00000000ee323b75 (libgio-2.0.so.0 - gtask.c: 1215) g_task_return_now
0x00000000ee323007 (libgio-2.0.so.0 - gtask.c: 1285) g_task_return
0x0000000008be4639 (ModemManager - mm-shared-qmi.c: 3370) active_slot_switch_ready
0x00000000ee323b75 (libgio-2.0.so.0 - gtask.c: 1215) g_task_return_now
0x00000000ee323ba3 (libgio-2.0.so.0 - gtask.c: 1229) complete_in_idle_cb
0x00000000ee1e5ba3 (libglib-2.0.so.0 - gmain.c: 3325) g_main_context_dispatch
0x00000000ee1e5dcb (libglib-2.0.so.0 - gmain.c: 4119) g_main_context_iterate
0x00000000ee1e5fe1 (libglib-2.0.so.0 - gmain.c: 4317) g_main_loop_run
0x0000000008b99fb1 (ModemManager - main.c: 210) main
0x00000000ee048165 (libc.so.6 - libc-start.c: 308) __libc_start_main
0x0000000008b99db3 (ModemManager) _start
0x0000000008c1f493 (ModemManager - elf-init.c: 89) __libc_csu_init
0x00000000ffc70f00