iface-modem: avoid lock info update if no interface skeleton available

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/351

(cherry picked from commit 96d83392a850b84888661f68cb170dd87fcd3c85)